Cleanup from Google3. (#221)
- Skylark rule fixes.
- Add APIs to get WTL HTTP and HTTPS addresses.
- Use WTL healthz instead of about: for tests.